Fix theming of alignment

--- a/now-playing/theme_align-right.css
+++ b/now-playing/theme_align-right.css
@@ -1,4 +1,4 @@
-.spotify-song, .spotify-artist {
+.spotify_song, .spotify_artists {
     text-align: right;
 }
 
